--- a/echo.1
+++ b/echo.1
@@ -1,7 +1,7 @@
 '\" t
 .\"     Title: echo
 .\"    Author: Mo McRoberts
-.\" Generator: DocBook XSL-NS Stylesheets v1.75.2 <http://docbook.sf.net/>
+.\" Generator: DocBook XSL Stylesheets v1.77.1 <http://docbook.sf.net/>
 .\"      Date: 09/03/2012
 .\"    Manual: User Commands
 .\"    Source: System Manager's Manual
@@ -134,7 +134,9 @@ utility and should instead make use of
 The
 \fBecho\fR
 utility conforms to the
-Single UNIX Specification, Version 3 (SUSv3)\&.
+Single UNIX Specification, Version 3 (SUSv3)
+and the
+X/Open System Interfaces Extension\&.
 .SH "SEE ALSO"
 .PP
 
