Move doc-generation configure machinery to acinclude.m4; add abbreviation for XSI; add README.

--- a/echo.1
+++ b/echo.1
@@ -136,7 +136,7 @@ The
 utility conforms to the
 Single UNIX Specification, Version 3 (SUSv3)
 and the
-X/Open System Interfaces Extension\&.
+X/Open System Interfaces Extension (XSI)\&.
 .SH "SEE ALSO"
 .PP
 
